--- a/assets/style.css
+++ b/assets/style.css
@@ -1,121 +1,126 @@
-/* #region Common */
-
+/*common rules */
 * {
-    margin: 0;
     padding: 0;
+    margin: 0;
     box-sizing: border-box;
-  }
-  
-  /* #endregion Common */
-  /* #region Utility */
-  .container {
+}
+
+.container{
     width: 70%;
-    max-width: 1176px;
-    margin: auto
-  }
-  
-  .container-sm {
-    width: 60%;
-    max-width: 1000px;
-    margin: 1rem auto;
-  }
-  
-  .row {
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
+.row {
     display: flex;
-    flex: wrap;
-    gap: 1rem
-  }
-  
-  .col-3 {
-    width: calc(100% / 12 * 3);
-  }
-  
-  .col-6 {
-    width: calc(100% / 12 * 6);
-  }
-  
-  .col-9 {
-    width: calc(100% / 12 * 9);
-  }
-  
-  
-  .d-flex {
+}
+
+.row_header {
     display: flex;
-  }
-  
-  .bg_secondary {
-    background-color: lightgray;
-  }
-  
-  .py_2 {
-    padding: 2rem 0;
-  }
-  
-  .space-between {
     justify-content: space-between;
-  }
-  
-  /* #endregion Utility */
-  /* #region Debug */
-  
-  .debug>header,
-  .debug>footer {
-    height: 550px;
-    background-color: red;
-  }
-  
-  .debug nav {
-    background-color: aqua;
-    height: 80px;
-  }
-  
-  .debug header .logo,
-  .debug header .menu,
-  .debug header .login {
-    height: 80px;
-    background-color: yellowgreen;
-    border: 1px solid;
-  }
-  
-  .debug .container-sm {
-    height: 400px;
-    background-color: blue;
-  }
-  
-  .debug [class^="col"] {
-    height: 300px;
-    background-color: rgb(0, 183, 255);
-  }
-  
-  .debug .contents {
-    height: 400px;
-    background-color: green;
-  }
-  
-  /* #endregion Debug */
-  
-  /* #region Header */
-  header .logo,
-  header .login {
-    flex-grow: 1;
-  }
-  
-  header .menu {
-    flex-grow: 2;
-  }
-  
-  /* #endregion Header */
-  /* #region Main */
-  
-  main section {
-    padding: 2rem 0;
-  }
-  
-  /* #endregion Main */
-  /* #region Footer */
-  
-  footer .footer_bottom {
-    padding: 1rem 0;
-  }
-  
-  /* #endregion Footer */
+}
+
+.row_prefooter {
+    display: flex;
+}
+
+.row_footer {
+    display: flex;
+    justify-content: space-between;
+    border: 2px solid red;
+}
+
+.debug [class^="col_"] {
+    background-color: #DAA520;
+}
+
+/* #region colonne */
+.col_1 {
+    width: calc((100% / 12) * 1);
+}
+
+.col_2 {
+    width: calc((100% / 12) * 2);
+}
+
+.col_3 {
+    width: calc((100% / 12) * 3);
+}
+
+.col_4 {
+    width: calc((100% / 12) * 4);
+}
+
+.col_5 {
+    width: calc((100% / 12) * 5);
+}
+
+.col_6 {
+    width: calc((100% / 12) * 6);
+}
+
+.col_7 {
+    width: calc((100% / 12) * 7);
+}
+
+.col_8 {
+    width: calc((100% / 12) * 8);
+}
+
+.col_9 {
+    width: calc((100% / 12) * 9);
+}
+/* #endregion colonne */
+
+body {
+    font-family: 'Montserrat', sans-serif;
+}
+
+header {
+    background-color: #255EE9;
+}
+
+section {
+    padding: 1rem;
+}
+
+.jumbo {
+    background-image: url(../img/jumbo.png);
+    background-size: cover;
+    background-position: center;
+    height: 380px;
+}
+
+#jumbo_main {
+    display:flex;
+}
+
+.jumbo_txt {
+    display: flex;
+    justify-content: center;
+    height: 270px;
+    width: 750px;
+}
+
+.grey {
+    background-color: #D3D3D3;
+}
+
+.foot_grey {
+    padding: 1rem;
+    background-color: #D3D3D3;
+    height: 500px;
+}
+
+.green {
+    background-color: #228B22;
+    height: 470px;
+}
+
+.black {
+    background-color: #23272A;
+}
+
+.aqua {
+    background-color: #7FFFD4;
+}
