--- a/assets/style.css
+++ b/assets/style.css
@@ -13,6 +13,7 @@
 
 .row {
     display: flex;
+    gap: 1rem;
 }
 
 .row_header {
@@ -28,6 +29,10 @@
     display: flex;
     justify-content: space-between;
     border: 2px solid red;
+}
+
+img {
+    max-width: 100%;
 }
 
 /* #region colonne */
