--- a/assets/style.css
+++ b/assets/style.css
@@ -142,3 +142,15 @@ section {
 .aqua {
     background-color: #7FFFD4;
 }
+
+a {
+    color: #F6F6F6;
+    text-decoration: none;
+    font-size: 10px;
+}
+
+.link_nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
